# fonti

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/fonti/: __init__.py  __main__.py  cli.py  font.py  info.py  inspect.py  install.py  ls.py  meta.py  operations.py  scan.py  select.py  uninstall.py  windows.py
src/fonti/cli/: ls.py  rm.py
src/fonti/win/: active.py  env.py  reg.py
tests/: test_cli_options_and_commands.py  test_info_env_active.py  test_inspect_env_active.py  test_install.py  test_main.py  test_meta.py  test_scan_select.py  test_uninstall.py  test_win_reg_and_ls.py
tools/: get_font_name.py
