[project]
name = "fonti"
version = "0.1.0"
description = "A command-line tool for installing fonts on Windows"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.62.1",
    "pywin32>=311",
    "typer>=0.24.1",
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
fonti = "fonti.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
